services/fd-tagging-tool/src/test/resources/valid/PossibleConfiguration/Sink.mt
// (c) https://github.com/MontiCore/monticore
package valid.PossibleConfiguration;

component Sink {
  port in int value;
}
