services/fd-tagging-tool/src/test/resources/invalid/TwoSameTags/Sink.mt
// (c) https://github.com/MontiCore/monticore
package invalid.TwoSameTags;

component Sink {
  port in int value;
}
